# Stock-Trend-Prediction

./: Makefile  README.md  pyproject.toml  setup.py
notebooks/: acquiring data and preprocessing.ipynb
stock_trend_prediction/: dataset.py  my_func.py
