[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stock_trend_prediction"
version = "0.0.1"
description = "A Time series project on the stock trend prediction"
authors = [
  { name = "Saurav Kumar" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["stock_trend_prediction"]
include = ["pyproject.toml", "stock_trend_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["stock_trend_prediction"]
force-sort-within-sections = true

